@@ -88,9 +88,9 @@
   <stage>
     <small_step_size type="float">5.0</small_step_size>
     <large_step_size type="float">25.0</large_step_size>
-    <x_sign type="int">-1</x_sign>
+    <x_sign type="int">1</x_sign>
     <y_sign type="int">1</y_sign>
-    <flip_axis type="int">0</flip_axis>
+    <flip_axis type="int">1</flip_axis>
     <stage_speed type="float">2.0</stage_speed>
     <drag_multiplier type="float">0.16</drag_multiplier>
   </stage>
@@ -158,11 +158,11 @@
   <mosaic>
     <objective type="string">obj1</objective>
     <flip_horizontal type="int">1</flip_horizontal>
-    <flip_vertical type="int">0</flip_vertical>
-    <transpose type="int">0</transpose>
-    <obj1 type="string">100x,100.0,0.0,0.0</obj1>
-    <obj2 type="string">10x,10.0,.0,.0</obj2>
-    <pixels_to_um type="float">0.160</pixels_to_um>
+    <flip_vertical type="int">1</flip_vertical>
+    <transpose type="int">1</transpose>
+    <obj1 type="string">100x,0.160,0.0,0.0</obj1>
+    <obj2 type="string">10x,1.60,.0,.0</obj2>
+    <obj3 type="string">4x,4.0,.0,.0</obj3>
   </mosaic>
 
 </settings>
